<resources>
    <string name="app_name">Pasin</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tvLogin_txt">Login Account</string>
    <string name="tvLoginDescription_txt">Masukkan akun kamu yang sudah terdaftar, atau masuk menggunakan google atau facebook juga bisa !</string>
    <string name="edUsername_txt">Username</string>
    <string name="edPassword_txt">Password</string>
    <string name="tvLupaPassword_txt">Lupa Password ?</string>
    <string name="btnLogin_txt">L O G I N</string>
    <string name="tvRegister_txt">Register Account</string>
    <string name="tvRegisterDescription_txt">Silahkan isi data dirinya, agar kamu bisa menggunakan aplikasi kita...</string>
    <string name="edEmailRegister_txt">Email</string>
    <string name="tvSudahPunyaAkun_txt">Sudah punya akun ?</string>
    <string name="tvKlikDisini_txt">Klik disini ...</string>
    <string name="btnRegister_txt">R E G I S T E R</string>
    <string name="edFullName_txt">Full Name</string>
    <string name="edEmailLogin_txt">Email</string>
    <string name="edConfirmPassword_txt">Confirm Password</string>
    <string name="tvDontHaveAccount_txt">Belum punya akun ?</string>
    <string name="tvContinueWith_txt">* Or Continue With *</string>
    <string name="tvContinuingWithGoogle_txt">By Continuing you agree to our</string>
    <string name="tvTermsAndConditions_txt">terms and conditions</string>
    <string name="tvRiwayatPengukuran_txt">Riwayat Pengukuran</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="measure_name">Nama Ukuran</string>
    <string name="description">Deskripsi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nama_pengukuran">Nama Pengukuran</string>
    <string name="tanggal_pengukuran">Senin, 22 - Mei - 2023 | 15:00</string>
    <string name="pinggang">Pinggang</string>
    <string name="hasil_pengukuran">Hasil Pengukuran</string>
    <string name="pinggul">Pinggul</string>
    <string name="dada">Dada</string>
    <string name="tinggi">Tinggi</string>
    <string name="xx_cm">cm</string>
    <string name="title_hint">Pengukuran Tanpa Judul</string>
    <string name="btnProses_txt">Proses</string>
    <string name="tvPilihGender">Pilih Gender :</string>
    <string name="tvKriteriaFotoAtas_txt">Pastikan fotonya memenuhi kriteria !</string>
    <string name="tvKriteriaFotoBawah_txt">Dilihat dulu kriterianya ya...</string>
    <string name="ivMale_txt">Laki - Laki</string>
    <string name="ivFemale_txt">Perempuan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvKriteriaFotoAtasSalah_txt">Maaf gambar anda belum sesuai kriteria !</string>
    <string name="tvKriteriaFotoBawahSalah_txt">Silahkan pilih gambar lagi...</string>
    <string name="tvPilihMetode">Pilih metode :</string>
    <string name="ivCamera_txt">Camera</string>
    <string name="ivGallery_txt">Gallery</string>
    <string name="btnNext_txt">Lanjut</string>
    <string name="tvPinggang_txt">Pinggang</string>
    <string name="tvPanggul_txt">Pinggul</string>
    <string name="tvDada_txt">Dada</string>
    <string name="tvTinggi_txt">Tinggi</string>
    <string name="contoh_pinggang">36.1</string>
    <string name="contoh_pinggul">36.1</string>
    <string name="contoh_dada">55</string>
    <string name="contoh_tinggi">185</string>
    <string name="rekomendasi_ukuran">Rekomendasi Ukuran Baju</string>
    <string name="contoh_ukuranBaju">XL</string>
    <string name="lihat_kriteria_foto">Lihat Kriteria Foto</string>
    <string name="masukkan_umur">Masukkan umur</string>
    <string name="masukkan_tinggi">Masukkan tinggi (cm)</string>
    <string name="Tinggi">Tinggi</string>
    <string name="Umur">Umur</string>
    <string name="xx_tahun">Tahun</string>
    <string name="valueUmur">21</string>
    <string name="tvUmur_txt">Umur</string>
    <string name="contoh_umur">21</string>
    <string name="tvBahu_txt">Bahu</string>
    <string name="contoh_pose_txt">Contoh Pose Pengambilan Foto</string>
    <string name="kriteria_pengambilan_txt">Kriteria Pengambilan Foto</string>
    <string name="kriteria1_txt">1. Seluruh badan harus kelihatan.</string>
    <string name="kriteria2_txt">2. Badan tegak dan menghadap ke kamera.</string>
    <string name="kriteria3_txt">3. Gunakanlah  baju yang merepresentasikan bentuk tubuh Anda!</string>
    <string name="kriteria4_txt">4. Foto dalam orientasi potrait.</string>
    <string name="kriteria5_txt">5. Background harus berwarna hijau.</string>
</resources>