<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preview.PreviewActivity">

    <include
        android:id="@+id/toolbar_preview"
        layout="@layout/toolbar_home"
        android:elevation="12dp"
        android:outlineProvider="bounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_preview">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardIvPreview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tvKriteriaFotoAtas_txt"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/cardIvPreview" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tvKriteriaFotoBawah_txt"
            android:textAlignment="center"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/tv1"
            app:layout_constraintStart_toStartOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_button_yellow"
            android:text="Lihat Kriteria Foto"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tvPilihGender"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_male"
                    android:backgroundTint="@color/blue_gender"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="30dp"
                    app:cardCornerRadius="15dp">

                    <ImageButton
                        android:id="@+id/imageButtonMale"
                        android:contentDescription="@string/ivMale_txt"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:backgroundTint="@color/blue_gender"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/male" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_female"
                    android:backgroundTint="@color/pink"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="15dp">

                    <ImageButton
                        android:id="@+id/imageButtonFemale"
                        android:contentDescription="@string/ivFemale_txt"
                        android:backgroundTint="@color/pink"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/gender_female" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnProses"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/btnProses_txt"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>